--- a/hibernate/README
+++ b/hibernate/README
@@ -13,7 +13,7 @@
 == Technologies ==
 
 * [[Technology:Hibernate]]: Hibernate Framework
-* [[Technology:HSQLDB]]: Hibernate [:Category:Database management system|DBMS]
+* [[Technology:HSQLDB]]: Hibernate [[:Category:Database management system|DBMS]]
 * [[Technology:javac]]: Java compiler (Version 1.6)
 * [[Technology:JDK]]: provider of javac et al.
 * [[Technology:JSE]]: execution platform (Version 1.6)
