--- a/hibernate/README
+++ b/hibernate/README
@@ -7,7 +7,7 @@
 * [[Language:Java]]
 * [[Language:SQL]]
 * [[Language:HSQLDialect]]
-* [[Language:HSQL]]
+* [[Language:HQL]]
 * [[Language:XML]]
 
 == Technologies ==
