--- a/hibernate/README
+++ b/hibernate/README
@@ -31,9 +31,10 @@
 
 [[O/R mapping]] or [[persistence]] within the Java platform are exercised by means 
 of [[Technology:Hibernate]]. The primary data model for companies is a straightforward
-object model for [[POJO]]s. There is a [[Language:XML]]-based mapping file for each class
-to derive a relational schema. To this end, properties and relationships are specified by
-the mapping. It is insightful to compare object model and the mapping-implied relational
+object model for [[POJO]]s. A mapping is defined to associate a relational schema
+with the classes. The mapping is specified in an [[Language:XML]] language and organized
+in a per-class manner. For each class, properties and relationships are specified by
+the mapping. It is insightful to compare the object model and the mapping-implied relational
 schema. It is also insightful to compare the latter schema with one that was ''natively'' 
 designed from a relational database point of view; see [[101implementation:mySql]]. In 
 particular, the object model and the implied relational schema are essentially "optimized" 
