git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@973 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hadoop/README
+++ b/hadoop/README
@@ -138,3 +138,4 @@ Instructions how to do this can be found for example here: http://www.maths.qmul
 == Contributors ==
 
 * {{101contributor|David Saile|developer}}
+* {{101contributor|Ralf Lämmel|reviewer}}
