git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1005 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -8,11 +8,9 @@ advanced modularization with [[Language:AspectJ]]
 
 == Technologies ==
 
+* [[Javaclipse]]
 * [[Technology:AJDT]]: compilation and IDE support for AspectJ
 * [[Technology:ajc]]: compilation (provided by AJDT)
-* [[Technology:JSE]]: execution platform (Version 1.6)
-* [[Technology:JUnit]]: automated testing support (Version 4)
-* [[Technology:Eclipse]]: optional IDE (Version 3.6)
 
 == Features ==
 
