git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1012 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hadoop/README
+++ b/hadoop/README
@@ -8,11 +8,8 @@ parallel processing with [[Technology:Hadoop]]
 
 == Technologies ==
 
-* [[Technology:Hadoop]]: Apache's MapReduce framework
-* [[Technology:JDK]]: provider of javac et al.
-* [[Technology:JSE]]: execution platform (Version 1.6)
-* [[Technology:JUnit]]: automated testing support (Version 4)
-* [[Technology:Eclipse]]: optional IDE (Version 3.6.2)
+* [[Technology:Hadoop]]
+* [[Javaclipse]]
 
 == Features ==
 
