git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1013 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -12,13 +12,9 @@
 
 == Technologies ==
 
-* [[Technology:Hibernate]]: Hibernate Framework
-* [[Technology:HSQLDB]]: Hibernate [[:Category:Database management system|DBMS]]
-* [[Technology:javac]]: Java compiler (Version 1.6)
-* [[Technology:JDK]]: provider of javac et al.
-* [[Technology:JSE]]: execution platform (Version 1.6)
-* [[Technology:JUnit]]: automated testing support (Version 4)
-* [[Technology:Eclipse]]: optional IDE (Version 3.4.1)
+* [[Technology:Hibernate]]
+* [[Technology:HSQLDB]]
+* [[Javaclipse]]
 
 == Features ==
 
