git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1021 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jgralab/README
+++ b/jgralab/README
@@ -26,8 +26,8 @@ or ''plain'' Java based on the schema-derived API.
 
 * [[Technology:JGraLab]]: Java-based support for the TGraph technical space
 * [[Technology:GReTL]]: the implementation of [[Language:GReTL]]
+* [[Technology:GraphViz]]
 * [[Technology:Ant]]: for building
-* [[Technology:GraphViz]]: graph visualization
 * [[Javaclipse]]
 
 == Features ==
