git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1024 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/swing/README
+++ b/swing/README
@@ -2,6 +2,17 @@
 
 provide interaction on companies by means of [[Technology:Swing]]
 
+== Languages ==
+
+* [[Language:Java]]
+
+
+== Technologies ==
+
+* [[Technology:Swing]]
+* [[Technology:AWT]]
+* [[Javaclipse]]
+
 == Features == 
 
 * [[101feature:Company]]
@@ -19,7 +30,7 @@ Specifically, the GUI provides the following gestures:
 == Architecture ==
 
 The implementation uses a poorman's MVC architecture.
-It is based on the object model of [[101implementation:java]].
+It is based on the object model of [[101implementation:javaComposition]].
 We do not assume any change-notification services on the model.
 There are two views: one for departments (and companies) and another for employees.
 The controller provides services that push effect of gestures into the model.
