git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1026 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/csharp/README
+++ b/csharp/README
@@ -24,8 +24,8 @@ a simple implementation in [[Language:CSharp|C#]] for the [[Technology:.NET]] Fr
 == Motivation == 
 
 Basic style of [[OO programming]] is exercised. The C# type system is
-used to create an in-memory representation, in fact, an [[object
-model]] for companies, departments, and employees. There is also an
+used to create an in-memory representation, in fact, an [[object model]] 
+for companies, departments, and employees. There is also an
 extra base class for persons from which employees are derived, thereby
 illustrating [[class inheritance]]. Operations on companies are
 implemented as [[Category:instance method]]s. XML-based
