git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1031 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -10,7 +10,7 @@ advanced modularization with [[Language:AspectJ]]
 
 * [[Technology:AJDT]]: compilation and IDE support for AspectJ
 * [[Technology:ajc]]: compilation (provided by AJDT)
-* [[Javaclipse]]
+* [[101profile:Simple Java]]
 
 == Features ==
 
