--- a/jgralab/README
+++ b/jgralab/README
@@ -27,8 +27,7 @@ or ''plain'' Java based on the schema-derived API.
 * [[Technology:JGraLab]]: Java-based support for the TGraph technical space
 * [[Technology:GReTL]]: the implementation of [[Language:GReTL]]
 * [[Technology:GraphViz]]
-* [[Technology:Ant]]: for building
-* [[Javaclipse]]
+* [[101profile:More Java]]
 
 == Features ==
 
