git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1043 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/swing/README
+++ b/swing/README
@@ -11,7 +11,7 @@ provide interaction on companies by means of [[Technology:Swing]]
 
 * [[Technology:Swing]]
 * [[Technology:AWT]]
-* [[Javaclipse]]
+* [[101profile:Simple Java]]
 
 == Features == 
 
