--- a/gwt/README
+++ b/gwt/README
@@ -13,7 +13,7 @@
 == Technologies ==
 
 * [[Technology:GWT]] (Version 2.2)
-* [[Javaclipse]] (Eclipse Version 3.6)
+* [[101profile:Simple Java]]
 
 == Features ==
 
