git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1046 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate2/README
+++ b/hibernate2/README
@@ -19,7 +19,7 @@ That is, this project's object model is mapped to a relational schema, which rep
 
 * [[Technology:Hibernate]]
 * [[Technology:HSQLDB]]
-* [[Javaclipse]]
+* [[101profile:More Java]]
 
 == Features ==
 
