git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1049 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jgralab/README
+++ b/jgralab/README
@@ -27,7 +27,7 @@ or ''plain'' Java based on the schema-derived API.
 * [[Technology:JGraLab]]: Java-based support for the TGraph technical space
 * [[Technology:GReTL]]: the implementation of [[Language:GReTL]]
 * [[Technology:GraphViz]]
-* [[101profile:More Java]]
+* [[101profile:Java CLI]]
 
 == Features ==
 
