git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1058 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc/README
+++ b/jdbc/README
@@ -4,7 +4,7 @@ Database programming with [[Technology:JDBC]]
 
 == Status ==
 
-[[101status:Broken]]
+[[101status:Broken]]: the underlying database has grossly changed.
 
 == Languages ==
 
