added seaside README
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1126 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seaside/README
+++ b/seaside/README
@@ -4,12 +4,12 @@ A web-based implementation in [[Language:Smalltalk]]
 
 == Usage ==
 
-1. Download Seaside for Pharo.
-2. Open Seaside environment.
-3. Open "world" context menu within seaside (right click). Tools->File Browser. Navigate to the "implementations\seaside" folder in your svn repository.  
-4. Select 101companies.st and click "install" on a toolbar.
-5. Select 101companies-Tests.st and click "install" on a toolbar.
-At this point you should be able to see 101comanies and 101companiesTests in the components browser.
+* 1. Download Seaside for Pharo.
+* 2. Open Seaside environment.
+* 3. Open "world" context menu within seaside (right click). Tools->File Browser. Navigate to the "implementations\seaside" folder in your svn repository.  
+* 4. Select 101companies.st and click "install" on a toolbar.
+* 5. Select 101companies-Tests.st and click "install" on a toolbar.
 
+At this point you should be able to see 101comanies and 101companiesTests in the components browser.
 Next you have to start a web-server. For this go to the "Seasise Control Panel", select [8080]WAComancheAdaptor and click "Start" button.
 Open http://localhost:8080 in your web-browser.
