--- a/seaside/README
+++ b/seaside/README
@@ -4,12 +4,18 @@ A web-based implementation in [[Language:Smalltalk]]
 
 == Usage ==
 
-* 1. Download Seaside for Pharo.
+* 1. Download Seaside for Pharo (http://www.seaside.st/download/pharo).
 * 2. Open Seaside environment.
-* 3. Open "world" context menu within seaside (right click). Tools->File Browser. Navigate to the "implementations\seaside" folder in your svn repository.  
+* 3. Open "world" context menu within seaside (right click or double left click). Tools->File Browser. Navigate to the "implementations\seaside" folder in your svn repository.  
 * 4. Select 101companies.st and click "install" on a toolbar.
 * 5. Select 101companies-Tests.st and click "install" on a toolbar.
 
 At this point you should be able to see 101comanies and 101companiesTests in the components browser.
 Next you have to start a web-server. For this go to the "Seasise Control Panel", select [8080]WAComancheAdaptor and click "Start" button.
+
+If you don't see any adapters:
+* 1. Open the ’Seaside Control Panel’ in the ’Tools’ submenu of the ’World’ menu
+* 2. Should there be no WAComancheAdaptor add one by right clicking and selecting ’Add adaptor...’
+* 3. Select the WAComancheAdaptor and press ’Start’.
+
 Open http://localhost:8080 in your web-browser.
