--- a/seaside/README
+++ b/seaside/README
@@ -7,8 +7,8 @@ A web-based implementation in [[Language:Smalltalk]]
 * 1. Download Seaside for Pharo (http://www.seaside.st/download/pharo).
 * 2. Open Seaside environment.
 * 3. Open "world" context menu within seaside (right click or double left click). Tools->File Browser. Navigate to the "implementations\seaside" folder in your svn repository.  
-* 4. Select 101companies.st and click "install" on a toolbar.
-* 5. Select 101companies-Tests.st and click "install" on a toolbar.
+* 4. Select ''101companies.st'' and click "install" on a toolbar.
+* 5. Select ''101companies-Tests.st'' and click "install" on a toolbar.
 
 At this point you should be able to see 101comanies and 101companiesTests in the components browser.
 Next you have to start a web-server. For this go to the "Seasise Control Panel", select [8080]WAComancheAdaptor and click "Start" button.
