--- a/jgralab/README
+++ b/jgralab/README
@@ -66,13 +66,17 @@ contain schema-derived interfaces and classes for companies.
 
 Here are some minor issues that could be normalized/improved:
 * Managers are employees definitely.
+** Fixed.
 * Person not really needed (inheritance illustrated with NamedElement).
+** Fixed.
 * Use float or double instead of ints for salaries.
+** Fixed. Now we use doubles.
 * Mentors and mentees should be both employees.
+** Fixed.
 * Enforce cardinality constraints for mentors:
 ** See [[101feature:Mentoring]].
 ** See prepared test testAddMentorNotOk.
-
+** Fixed that way.
 
 == Contributors ==
 
