--- a/seaside/README
+++ b/seaside/README
@@ -2,6 +2,23 @@
 
 A web-based implementation in [[Language:Smalltalk]]
 
+== Languages ==
+
+* [[Language:Smalltalk]]
+
+== Technologies ==
+
+* [[Technology:Pharo]]
+* [[Technology:Seaside]]
+
+== Features ==
+
+* [[101feature:Company]]
+* [[101feature:Cut]]
+* [[101feature:Total]]
+
+== Architecture ==
+
 == Usage ==
 
 * 1. Download Seaside for Pharo (http://www.seaside.st/download/pharo).
@@ -18,4 +35,9 @@ If you don't see any adapters:
 * 2. Should there be no WAComancheAdaptor add one by right clicking and selecting ’Add adaptor...’
 * 3. Select the WAComancheAdaptor and press ’Start’.
 
-Open http://localhost:8080 in your web-browser.
+Open http://localhost:8080/101companies in your web-browser.
+
+== Contributors ==
+
+* [[101contributor:Andy Kellens|developer]]
+* [[101contributor:Andrei Varanovich|reviewer]]
